--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ h1{
     margin-top:1rem;
 
     color: rgb(248, 248, 248);
-   color: rgb(144, 148, 148);
+   color: rgb(78, 80, 80);
    font-weight:200;
 }
 h2{
@@ -613,6 +613,117 @@ border-radius:5px;
  }
 
  
+.form {
+  width: 100%;
+  height:700px;
+
+  border-radius: 5px;
+
+  box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
+
+  padding-top:7rem;
+  background-image: linear-gradient(-777deg, #94dcd7 50%, #bbbbbb 50%);
+}
+
+@media (min-width: 900px) {
+
+  .form {
+    width: 100%;
+  height:300px;
+   
+  
+    box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
+   
+  padding-top:4rem;
+  padding-left:2rem;
+  padding-right:2rem;
+    background-image: linear-gradient(-731deg, #94dcd7 50%, #bbbbbb 50%);
+  }
+
+  p{
+    font-size:1.2rem;
+  }
+}
+/* form Container */
+form .con {
+  text-align: center;
+
+  margin: 0 auto;
+}
+
+
+.team {
+  width: 100%;
+  height:900px;
+
+
+
+  box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
+
+  padding-top:7rem;
+
+  background-image: linear-gradient(-225deg, #e3fdf5 0%, #ffe6fa 100%);
+        background-image: linear-gradient(to top,#94dcd7 0%, #ffffff 100%);
+}
+
+@media (min-width: 900px) {
+
+  .team {
+    width: 100%;
+  height:900px;
+ 
+   
+    box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
+   
+  padding-top:4rem;
+  padding-left:2rem;
+  padding-right:2rem;
+   
+  }
+}
+
+.member{
+  width:20%;
+  margin:2rem;
+}
+
+.membergrid{
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns:1fr 1fr 1fr 1fr ;
+}
+
+.box {
+  padding: 0;
+
+  margin: auto;
+  text-align: center;
+  color: white;
+  font-family: "Century Gothic", sans-serif;
+}
+
+.box p {
+  text-align: justify;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+.box li {
+  display: inline-block;
+  margin: 10px;
+  list-style: none;
+}
+.box li a {
+  color: rgb(238, 207, 207);
+  text-decoration: none;
+  font-size: 30px;
+  transition: all ease-in-out 250ms;
+}
+.box li a:hover {
+  color: #000000;
+}
+ 
     </style>
   </head>
   <body>
@@ -661,7 +772,145 @@ border-radius:5px;
     <button class="btn"><i class="fa fa-info-circle" aria-hidden="true"></i>CONTACT US</button>
 <br>
 <br>
-<img class="margin" src="./about.png" style="width:100%" />
+
+<div class="form">
+
+  <h1>About Us</h1>
+  <br>
+<p style="text-align:center;">
+
+  CrossLives was founded when a team of 7 sophomore students from Manipal Institute of Technology participated in the MIT COVID-19 Challenge: India Turning the Tide organised by the Massachusetts Institute of Technology from 28-Aug-2020 to 30- Aug-2020, a 48-Hour Virtual Event and was announced as one of the Winning Teams of Track-H: Providing Mental Health Support Resources.
+
+</p>
+</div>
+<div class="team">
+
+  <h1>Our Team</h1>
+  <br>
+  <div >
+<div style="text-align:center;">
+<div>
+  <img class="member" src="./team/ANANYA THAPLIYAL.jpg">
+  <h3>ANANYA THAPLIYAL</h3>
+  <section class="box">
+   
+      <a href="https://github.com/Dwitrisha" target="_blank"
+        ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
+      ></a>
+    
+      <a
+        href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+        target="_blank"
+        ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
+      ></a>
+ 
+  </section>
+</div>
+<div>
+  <img class="member"src="./team/DHRUVA P BHAT.jpg">
+  <h3>DHRUVA P BHAT</h3>
+  <section class="box">
+   
+    <a href="https://github.com/Dwitrisha" target="_blank"
+      ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+  
+    <a
+      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      target="_blank"
+      ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+
+</section>
+</div>
+<div>
+  <img class="member"src="./team/DWITRISHA SAHA.jpg">
+  <h3>DWITRISHA SAHA</h3>
+  <section class="box">
+   
+    <a href="https://github.com/Dwitrisha" target="_blank"
+      ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+  
+    <a
+      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      target="_blank"
+      ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+
+</section>
+</div>
+<div>
+  <img class="member"src="./team/MEGHANA RAO.jpg">
+  <h3>MEGHANA RAO</h3>
+  <section class="box">
+   
+    <a href="https://github.com/Dwitrisha" target="_blank"
+      ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+  
+    <a
+      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      target="_blank"
+      ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+
+</section>
+</div>
+<div>
+  <img class="member" src="./team/PRATYAKSH GUPTA.jpg">
+  <h3>PRATYAKSH GUPTA</h3>
+  <section class="box">
+   
+    <a href="https://github.com/Dwitrisha" target="_blank"
+      ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+  
+    <a
+      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      target="_blank"
+      ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+
+</section>
+</div>
+<div>
+  <img class="member" src="./team/SIMRAN SALUJA.jpeg">
+  <h3>SIMRAN SALUJA</h3>
+  <section class="box">
+   
+    <a href="https://github.com/Dwitrisha" target="_blank"
+      ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+  
+    <a
+      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      target="_blank"
+      ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+
+</section>
+</div>
+<div>
+  <img class="member" src="./team/VISHESH GHORAWAT.jpg">
+  <h3>VISHESH GHORAWAT</h3>
+  <section class="box">
+   
+    <a href="https://github.com/Dwitrisha" target="_blank"
+      ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+  
+    <a
+      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      target="_blank"
+      ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+
+</section>
+</div>
+</div>
+</div>
+</div>
 
   </body>
 </html>
