--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ form .con {
 
 .team {
   width: 100%;
-  height:900px;
+  height:2500px;
 
 
 
@@ -685,6 +685,16 @@ form .con {
 .member{
   width:20%;
   margin:2rem;
+  border-radius: 25px;
+}
+
+@media(max-width:900px)
+{
+  .member{
+  width:40%;
+  margin:2rem;
+}
+
 }
 
 .membergrid{
@@ -794,12 +804,12 @@ ul {
   <h3>ANANYA THAPLIYAL</h3>
   <section class="box">
    
-      <a href="https://github.com/Dwitrisha" target="_blank"
+      <a href="https://github.com/AnanyaThapliyal2303" target="_blank"
         ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
       ></a>
     
       <a
-        href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+        href="https://www.linkedin.com/in/ananya-thapliyal-964010181/"
         target="_blank"
         ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
       ></a>
@@ -879,12 +889,12 @@ ul {
   <h3>SIMRAN SALUJA</h3>
   <section class="box">
    
-    <a href="https://github.com/Dwitrisha" target="_blank"
+    <a href="https://github.com/Simran-crypto" target="_blank"
       ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
   
     <a
-      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      href="https://www.linkedin.com/in/simran-saluja-0596221a0"
       target="_blank"
       ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
@@ -896,12 +906,12 @@ ul {
   <h3>VISHESH GHORAWAT</h3>
   <section class="box">
    
-    <a href="https://github.com/Dwitrisha" target="_blank"
+    <a href="http://github.com/visheshghorawat" target="_blank"
       ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
   
     <a
-      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      href="https://www.linkedin.com/in/vishesh-ghorawat-a0382b1b1"
       target="_blank"
       ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
