--- a/index.html
+++ b/index.html
@@ -686,6 +686,7 @@ form .con {
   width:20%;
   margin:2rem;
   border-radius: 25px;
+  box-shadow: 2px 2px 4px black;
 }
 
 @media(max-width:900px)
@@ -693,6 +694,7 @@ form .con {
   .member{
   width:40%;
   margin:2rem;
+  box-shadow: 2px 2px 4px black;
 }
 
 }
@@ -715,25 +717,7 @@ form .con {
 .box p {
   text-align: justify;
 }
-ul {
-  margin: 0;
-  padding: 0;
-}
-.box li {
-  display: inline-block;
-  margin: 10px;
-  list-style: none;
-}
-.box li a {
-  color: rgb(238, 207, 207);
-  text-decoration: none;
-  font-size: 30px;
-  transition: all ease-in-out 250ms;
-}
-.box li a:hover {
-  color: #000000;
-}
- 
+
     </style>
   </head>
   <body>
@@ -855,12 +839,12 @@ ul {
   <h3>MEGHANA RAO</h3>
   <section class="box">
    
-    <a href="https://github.com/Dwitrisha" target="_blank"
+    <a href="https://github.com/meghna-rao" target="_blank"
       ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
   
     <a
-      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      href="https://www.linkedin.com/in/meghana-rao-6508b81a7"
       target="_blank"
       ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
