--- a/index.html
+++ b/index.html
@@ -615,14 +615,14 @@ border-radius:5px;
  
 .form {
   width: 100%;
-  height:700px;
+  height:300px;
 
-  border-radius: 5px;
+  color: white;
 
   box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
 
-  padding-top:7rem;
-  background-image: linear-gradient(-777deg, #94dcd7 50%, #bbbbbb 50%);
+  padding-top:2rem;
+  background-image: linear-gradient(-752deg, #94dcd7 50%, #bbbbbb 50%);
 }
 
 @media (min-width: 900px) {
@@ -718,6 +718,40 @@ form .con {
   text-align: justify;
 }
 
+@media(max-width: 900px){
+
+ 
+
+
+
+.wrap{
+
+z-index: 0;
+height: 3rem;
+box-shadow: 1px 2px 4px rgb(77, 77, 77);
+padding: 0.1rem;
+}
+
+}
+
+
+
+
+
+@media(min-width: 900px)
+{
+ 
+
+.navgrid{
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
+padding-right:20% ;
+  
+}
+
+}
+
     </style>
   </head>
   <body>
@@ -743,10 +777,7 @@ form .con {
       </a>
 </div> 
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="viewport" content="height=device-height, initial-scale=1.0" />
-
-    </style>
+  
      
  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
