--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ form .con {
   padding-top:7rem;
 
   background-image: linear-gradient(-225deg, #e3fdf5 0%, #ffe6fa 100%);
-        background-image: linear-gradient(to top,#94dcd7 0%, #ffffff 100%);
+        background-image: linear-gradient(to top,#ffffff,#94dcd7, #ffffff);
 }
 
 @media (min-width: 900px) {
@@ -678,12 +678,20 @@ form .con {
   padding-top:4rem;
   padding-left:2rem;
   padding-right:2rem;
+  background-image: linear-gradient(-225deg, #e3fdf5 0%, #ffe6fa 100%);
+        background-image: linear-gradient(to top,#ffffff,#94dcd7, #ffffff);
    
   }
 }
 
 .member{
-  width:20%;
+  width:50%;
+  margin:2rem;
+  border-radius: 25px;
+  box-shadow: 2px 2px 4px black;
+}
+.member2{
+  width:50%;
   margin:2rem;
   border-radius: 25px;
   box-shadow: 2px 2px 4px black;
@@ -691,7 +699,7 @@ form .con {
 
 @media(max-width:900px)
 {
-  .member{
+  .member2,.member{
   width:40%;
   margin:2rem;
   box-shadow: 2px 2px 4px black;
@@ -750,6 +758,24 @@ padding-right:20% ;
   
 }
 
+.mem{
+  display:grid;
+  grid-template-rows: 1fr ;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.mem2{
+  display:grid;
+  grid-template-rows: 1fr ;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-left:13rem;
+  padding-right:13rem;
+}
+
+}
+
+h3{
+
+  color: #696767;
 }
 
     </style>
@@ -814,6 +840,7 @@ padding-right:20% ;
   <br>
   <div >
 <div style="text-align:center;">
+  <div class="mem">
 <div>
   <img class="member" src="./team/ANANYA THAPLIYAL.jpg">
   <h3>ANANYA THAPLIYAL</h3>
@@ -836,18 +863,19 @@ padding-right:20% ;
   <h3>DHRUVA P BHAT</h3>
   <section class="box">
    
-    <a href="https://github.com/Dwitrisha" target="_blank"
+    <a href="https://github.com/Dhruvbhat1729" target="_blank"
       ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
   
     <a
-      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      href="https://www.linkedin.com/in/dhruva-p-bhat-272477155"
       target="_blank"
       ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
 
 </section>
 </div>
+
 <div>
   <img class="member"src="./team/DWITRISHA SAHA.jpg">
   <h3>DWITRISHA SAHA</h3>
@@ -882,17 +910,19 @@ padding-right:20% ;
 
 </section>
 </div>
+</div>
+<div class="mem2">
 <div>
-  <img class="member" src="./team/PRATYAKSH GUPTA.jpg">
+  <img class="member2" src="./team/PRATYAKSH GUPTA.jpg">
   <h3>PRATYAKSH GUPTA</h3>
   <section class="box">
    
-    <a href="https://github.com/Dwitrisha" target="_blank"
+    <a href="http://github.com/oscillator25" target="_blank"
       ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
   
     <a
-      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      href="https://www.linkedin.com/in/oscillator25"
       target="_blank"
       ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
@@ -900,7 +930,7 @@ padding-right:20% ;
 </section>
 </div>
 <div>
-  <img class="member" src="./team/SIMRAN SALUJA.jpeg">
+  <img class="member2" src="./team/SIMRAN SALUJA.jpeg">
   <h3>SIMRAN SALUJA</h3>
   <section class="box">
    
@@ -917,7 +947,7 @@ padding-right:20% ;
 </section>
 </div>
 <div>
-  <img class="member" src="./team/VISHESH GHORAWAT.jpg">
+  <img class="member2" src="./team/VISHESH GHORAWAT.jpg">
   <h3>VISHESH GHORAWAT</h3>
   <section class="box">
    
@@ -932,6 +962,7 @@ padding-right:20% ;
     ></a>
 
 </section>
+</div>
 </div>
 </div>
 </div>
