--- a/index.html
+++ b/index.html
@@ -790,9 +790,9 @@ h3{
     <nav>
       <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="./features/features.html">WHAT WE DO</a></li>
+        <li><a href="#about">WHAT WE DO</a></li>
 
-        <li><a href="./schedule/schedule.html">TEAM</a></li>
+        <li><a href="#team">TEAM</a></li>
       
       </ul>
     </nav>
@@ -824,7 +824,7 @@ h3{
 <br>
 <br>
 
-<div class="form">
+<div  id="about" class="form">
 
   <h1>About Us</h1>
   <br>
@@ -834,7 +834,7 @@ h3{
 
 </p>
 </div>
-<div class="team">
+<div  id="team" class="team">
 
   <h1>Our Team</h1>
   <br>
