--- a/index.html
+++ b/index.html
@@ -833,6 +833,9 @@ h3{
   CrossLives was founded when a team of 7 sophomore students from Manipal Institute of Technology participated in the MIT COVID-19 Challenge: India Turning the Tide organised by the Massachusetts Institute of Technology from 28-Aug-2020 to 30- Aug-2020, a 48-Hour Virtual Event and was announced as one of the Winning Teams of Track-H: Providing Mental Health Support Resources.
 
 </p>
+<div style="text-align:right">
+<img src="./winner.png" style="width:15%">
+</div>
 </div>
 <div  id="team" class="team">
 
