--- a/index.html
+++ b/index.html
@@ -778,6 +778,20 @@ h3{
   color: #696767;
 }
 
+
+.winner{
+  width:15%;
+}
+
+@media(max-width:900px)
+{
+  
+.winner{
+  width:35%;
+}
+
+}
+
     </style>
   </head>
   <body>
@@ -834,7 +848,7 @@ h3{
 
 </p>
 <div style="text-align:right">
-<img src="./winner.png" style="width:15%">
+<img src="./winner.png" class="winner">
 </div>
 </div>
 <div  id="team" class="team">
