--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@ h3{
     <nav>
       <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="#about">WHAT WE DO</a></li>
+        <li><a href="#about">ABOUT US</a></li>
 
         <li><a href="#team">TEAM</a></li>
       
@@ -903,7 +903,7 @@ h3{
     ></a>
   
     <a
-      href="https://www.linkedin.com/in/dwitrisha-saha-183606197/"
+      href="https://www.linkedin.com/in/dwitrisha/"
       target="_blank"
       ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
