--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ nav{
 .btn:hover {
   color: rgb(255, 255, 255);
   height: 0%;
-  background-color:#5ed0d8;
+  background-color:#94dcd7;
 
 border:white;
 }
