--- a/index.html
+++ b/index.html
@@ -687,14 +687,14 @@ form .con {
 .member{
   width:50%;
   margin:2rem;
-  border-radius: 25px;
+  border-radius: 100px;
   box-shadow: 2px 2px 4px black;
 }
 .member2{
   width:50%;
   margin:2rem;
-  border-radius: 25px;
-  box-shadow: 2px 2px 4px black;
+  border-radius: 100px;
+  box-shadow: 2px 2px 4px rgb(85, 84, 84);
 }
 
 @media(max-width:900px)
@@ -702,7 +702,7 @@ form .con {
   .member2,.member{
   width:40%;
   margin:2rem;
-  box-shadow: 2px 2px 4px black;
+  box-shadow: 2px 2px 4px rgb(85, 84, 84);
 }
 
 }
