--- a/index.html
+++ b/index.html
@@ -804,7 +804,199 @@ h3{
     width:0.1%;
   }
 }
-    </style>
+  
+  
+  
+form {
+  width: 90%;
+  min-height: 50%;
+  height: auto;
+  border-radius: 5px;
+  margin: 2% auto;
+  box-shadow: 2px 2px 4px black;
+  padding: 1%;
+
+
+ background-color: #c6b0ee;
+
+}
+
+@media (min-width: 600px) {
+
+	 table {
+        border-collapse: separate;
+        border-spacing: 50% 0;
+		text-align: center;
+      }
+  form {
+    width: 40%;
+    min-height: 50%;
+    height: auto;
+    border-radius: 5px;
+    margin: 2% auto;
+
+    padding: 1%;
+
+  }
+}
+
+
+
+.submits {
+  width: 48%;
+  display: inline-block;
+  float: center;
+  text-align: center;
+  display: inline-block;
+  color: #252537;
+
+  width: 280px;
+  height: 50px;
+
+  background: #fff;
+  border-radius: 5px;
+
+  outline: none;
+  border: none;
+
+  cursor: pointer;
+  text-align: center;
+  transition: all 0.2s linear;
+
+  margin: 7% auto;
+  letter-spacing: 0.05em;
+}
+
+
+.sign-up {
+  background: #5703a7;
+  color: white;
+}
+button:hover {
+  transform: translatey(3px);
+  box-shadow: none;
+}
+
+/* buttons hover Animation */
+button:hover {
+  animation: ani9 0.4s ease-in-out infinite alternate;
+}
+@keyframes ani9 {
+  0% {
+    transform: translateY(3px);
+  }
+  100% {
+    transform: translateY(5px);
+  }
+}
+
+input[type="text"] {
+  width: 90%;
+  height: 50px;
+
+  margin-top: 2%;
+  padding: 15px;
+
+  font-size: 16px;
+  font-family: "Abel", sans-serif;
+  color: black;
+
+  outline: none;
+  border: none;
+  background-color: white;
+  border-radius: 5px 5px 5px 5px;
+  transition: 0.2s linear;
+}
+
+
+
+@media(max-width:800px){
+
+
+	input[type="text"] {
+  width: 90%;
+  height: 50px;
+
+  margin-top: 2%;
+  padding: 15px;
+
+  font-size: 16px;
+  font-family: "Abel", sans-serif;
+  color: black;
+
+  outline: none;
+  border: none;
+  background-color: white;
+  border-radius: 5px 5px 5px 5px;
+  transition: 0.2s linear;
+}
+}
+ td {
+    padding-left: 3rem;
+        text-align: center;
+
+
+      }
+
+input[type="email"] {
+  width: 90%;
+  height: 50px;
+  background-color: rgb(255, 251, 251);
+  margin-top: 2%;
+  padding: 15px;
+
+  font-size: 16px;
+  font-family: "Abel", sans-serif;
+  color: black;
+
+  outline: none;
+  border: none;
+
+  border-radius: 5px 5px 5px 5px;
+  transition: 0.2s linear;
+}
+
+
+input[type="tel"] {
+  width: 60%;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 0.644);
+  margin-top: 2%;
+  padding: 15px;
+
+  font-size: 16px;
+  font-family: "Abel", sans-serif;
+  color: white;
+
+  outline: none;
+  border: none;
+  margin-left: 0rem;
+  border-radius: 5px 5px 5px 5px;
+  transition: 0.2s linear;
+}
+
+form{
+  background-color:#94dcd7a4;
+  margin-top:0;
+
+}
+
+.contact{
+  background-image: linear-gradient(-225deg, #e3fdf5 0%, #ffe6fa 100%);
+        background-image: linear-gradient(to top,#ffffff,#73d3cc, #ffffff);
+
+        background: url("https://images.pexels.com/photos/1416530/pexels-photo-1416530.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+        background-position: center;
+        background-size: cover;
+        padding-top:7rem;
+        padding-bottom:7rem;
+        
+}
+
+.submits{
+  background-color:#94dcd7;
+}
+  </style>
   </head>
   <body>
 
@@ -852,7 +1044,10 @@ h3{
     <br>
 
     <div style="text-align: center;">
-    <button class="btn"><i class="fa fa-info-circle" aria-hidden="true"></i>CONTACT US</button>
+
+      <a href="#contact">
+    <button class="btn"><i class="fa fa-info-circle" aria-hidden="true" ></i>CONTACT US</button>
+  </a>
 <br>
 <br>
 
@@ -1002,6 +1197,21 @@ h3{
 </div>
 </div>
 </div>
+<div class="contact">
+
+<form action="search.php" method="post" name ="send" id="contact">
+
+<h2 style="color:#000000">Contact Form</h2>
+<br>
+  <input type="text" id="FirstName" name="FirstName" placeholder="First Name*" required>
+  <input type="text" id="LastName" name="LastName" placeholder="Last Name*" required>
+  <input type="email" id="Email" name="Email" placeholder="Email*" required>
+  <input type="text" id="Note" name="Note" placeholder="Note">
+  <button type="submit" class=" submits " value="Submit"> Submit</button>
+
+            </form>
+
+          </div>
 
   </body>
 </html>
