--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@ form{
   <h3>SIMRAN SALUJA</h3>
   <section class="box">
    
-    <a href="https://github.com/Simran-crypto" target="_blank"
+    <a href="https://github.com/Simran-saluja03" target="_blank"
       ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
     ></a>
   
