--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,24 @@ form{
 </section>
 </div>
 </div>
+<div class="mem2">
+<div>
+  <img class="member2" src="./team/PRATYAKSH GUPTA.jpg">
+  <h3>PRATYAKSH GUPTA</h3>
+  <section class="box">
+   
+    <a href="http://github.com/oscillator25" target="_blank"
+      ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
+  
+    <a
+      href="https://www.linkedin.com/in/oscillator25"
+      target="_blank"
+      ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
+    ></a>
 
+</section>
+</div>
 <div>
   <img class="member2" src="./team/SIMRAN SALUJA.jpeg">
   <h3>SIMRAN SALUJA</h3>
