--- a/index.html
+++ b/index.html
@@ -691,8 +691,8 @@ form .con {
   box-shadow: 2px 2px 4px black;
 }
 .member2{
-  width:50%;
-  margin:2rem;
+  width:40%;
+  margin-top:2rem;
   border-radius: 100px;
   box-shadow: 2px 2px 4px rgb(85, 84, 84);
 }
@@ -766,7 +766,7 @@ padding-right:20% ;
 .mem2{
   display:grid;
   grid-template-rows: 1fr ;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   padding-left:13rem;
   padding-right:13rem;
 }
@@ -1142,23 +1142,7 @@ form{
 </div>
 </div>
 <div class="mem2">
-<div>
-  <img class="member2" src="./team/PRATYAKSH GUPTA.jpg">
-  <h3>PRATYAKSH GUPTA</h3>
-  <section class="box">
-   
-    <a href="http://github.com/oscillator25" target="_blank"
-      ><i class="fa fa-github" aria-hidden="true" style="font-size:2rem;"></i
-    ></a>
-  
-    <a
-      href="https://www.linkedin.com/in/oscillator25"
-      target="_blank"
-      ><i class="fa fa-linkedin" aria-hidden="true" style="font-size:2rem;"></i
-    ></a>
 
-</section>
-</div>
 <div>
   <img class="member2" src="./team/SIMRAN SALUJA.jpeg">
   <h3>SIMRAN SALUJA</h3>
